# system-ball-on-plate

./: CMakeLists.txt  README.md
.cache/clangd/index/: allocators.h.7E6769ED1D98187B.idx  allocators.h.C635A3817BFFF182.idx  biginteger.h.302151FB0E6F0A42.idx  biginteger.h.5D7F2D2F4E747C66.idx  clzll.h.1B5C715683A48851.idx  clzll.h.3D164051435AD830.idx  diyfp.h.19AA065A3B3188D5.idx  diyfp.h.99CEFFB87E5445CB.idx  document.h.14BF7F096392C65B.idx  document.h.64005A354674D6CA.idx  encodedstream.h.272F3A3DFFE3FA65.idx  encodedstream.h.67D14D525EAA9F29.idx  encodings.h.537C6EE8274B4653.idx  encodings.h.EB5EB8AC10A2DC00.idx  error.h.638652AFB1C98C59.idx  error.h.CA0D265468C34FAD.idx  ieee754.h.11F233251F8A7713.idx  ieee754.h.BDB2B20CC17084C1.idx  memorystream.h.83E9710490322F7D.idx  memorystream.h.926FFF089B5A8623.idx  meta.h.61D491DBA67D616F.idx  meta.h.A6B31B5C93B0B501.idx  mongoose.h.D9D108BDC4BB632C.idx  pow10.h.2A72868A7CF83FF9.idx  pow10.h.56D8EB4A73AC0C82.idx  rapidjson.h.2B8F773AB5195CF1.idx  rapidjson.h.9AFB419729B50E55.idx  reader.h.8BB73698E15FFE30.idx  reader.h.AF4494D69FB70D33.idx  serialComm.cpp.3215FEAB27F015B9.idx  serialComm.cpp.715B83D0865E1E8A.idx  serialComm.h.1773B59907ACDA7B.idx  serialComm.h.B17D17448E3129C0.idx  serialTest.cpp.86418322092CE578.idx  serialib.cpp.7307CA11A338C1BA.idx  serialib.cpp.FB4D8AEB183C0B56.idx  serialib.h.27E62485513E5932.idx  serialib.h.439BA9576FE5FCB6.idx  stack.h.AE04A16BD2300B99.idx  stack.h.B384F21835BEC184.idx  (+12 more)
scripts/: controller1.cpp  servoToPlatform.cpp
serialComm/: CMakeLists.txt  serialComm.cpp  serialComm.h
systemIdentification/: CMakeLists.txt  mimoIdentification.cpp  mimoIdentification.h
tests/: serialTest.cpp  serialWithWebsocket.cpp  variadicTemplates.cpp  websocketTest.cpp
websocket/: CMakeLists.txt  websocketServer.cpp  websocketServer.h
